<resources>
    <string name="app_name">Location Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="longitude_label">Longitud</string>
    <string name="latitude_label">Latitud</string>
    <string name="activity_label">Actividad</string>
    <string name="btn_regresar">Back</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_luces">Lights</string>
    <string name="ligth_bulb">Light bulb</string>
    <string name="btn_musica">Stop Music</string>
    <string name="btn_dejcompubi">Stop sharing location</string>
    <string name="btn_mandarubi">Share Location</string>
    <string name="btn_emergencia">EMERGENCY</string>
    <string name="casa">casa</string>
    <string name="Location">Location</string>
    <string name="main_Bedroom">Main Bedroom</string>
    <string name="living_room">Living room</string>
    <string name="kitchen">Kitchen</string>
    <string name="dining_room">Dining Room</string>
    <string name="main_bathroom">Main Bathroom</string>
    <string name="general_bathroom">General Bathroom</string>
    <string name="sonsbed">Son´s Bedroom</string>
    <string name="daughtbed">Daughter´s Bedroom</string>
    <string name="menu_lights">Select which lights you want to turn On/Off</string>
    <string name="logo_login">Logo Smart Home</string>
    <string name="menu_title">Choose an option</string>


</resources>
