<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogris"
    tools:context=".MenuActivity">


    <ImageButton
        android:id="@+id/luces"
        android:layout_width="87dp"
        android:layout_height="92dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="284dp"
        android:layout_marginRight="284dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/yellow"
        android:contentDescription="@string/btn_luces"
        android:onClick="abrirMenuLuces"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/luces"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/txt_lights"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="292dp"
        android:layout_marginRight="292dp"
        android:text="@string/btn_luces"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/luces"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="@string/btn_mandarubi"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubicacionPadre"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_music"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btn_musica"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musica"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/ubicacionPadre"
        android:layout_width="87dp"
        android:layout_height="92dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/green_light"
        android:contentDescription="@string/btn_mandarubi"
        android:onClick="abrirMenuUbicacion"
        android:scaleType="centerCrop"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/luces"
        app:srcCompat="@drawable/ubi" />

    <ImageButton
        android:id="@+id/musica"
        android:layout_width="87dp"
        android:layout_height="92dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/purple"
        android:contentDescription="@string/btn_musica"
        android:onClick="controlMusica"
        android:scaleType="centerCrop"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/musica" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="277dp"
        android:contentDescription="@string/casa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casa" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:text="@string/menu_title"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <TextView
        android:id="@+id/txt_ubi"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:text="Ubi"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_location"
        app:layout_constraintVertical_bias="0.262" />

</androidx.constraintlayout.widget.ConstraintLayout>